# learnWebGPU

./: .gitignore  Application.h  CMakeLists.txt  Camera.h  Makefile  Model.h  README.md  adapter.c  adapter.h  compile_commands.json  device.c  device.h  imgui.ini  linearAlgebra.c  linearAlgebra.h  main.c  main2.c  vcpkg.json
01basic3d/: attributes.c  basic3d.h  buffers.c  triangle.c  vertex.c
01basic3d/01geometry/: attributes.c  buffers.c  index.c  triangle.c  vertex.c
01basic3d/02uniforms/: dynamic.c  first.c  more.c
01basic3d/03meshes/: depth.c  simple.c  transformation.c
01basic3d/04texturing/: first.c  mapping.c  sampler.c
Application/: Application.h  Camera.h  Compute.h  Fourareen.h  Lightning.h  Model.h  RenderTarget.h  adapter.c  device.c  gui.h
Application/RenderTarget/: Fourareen.h  Mammoth.h  RenderTarget.h
resources/compute/: pipeline.wgsl
resources/geometry/: index.wgsl  vertex.wgsl
resources/meshes/: depth.wgsl  simple.wgsl  transformation.wgsl
resources/texturing/: first.wgsl  mapping.wgsl  sampler.wgsl
resources/uniforms/: first.wgsl  more.wgsl
